overhaul video to better handle delay and recording and playback during live delay mode to avoid looping.  should be broadcasting sse events but not yet handling them.

--- a/xgds_video/templates/xgds_video/map_active_playbacks.html
+++ b/xgds_video/templates/xgds_video/map_active_playbacks.html
@@ -8,7 +8,7 @@
 {% endblock videoscripts %}
 
     {% block xgds_video_options %}
-    var xgds_video_options = { playFlag: true,
+    xgds_video_options = { playFlag: true,
                        		   seekFlag: false,
 		                       initialState: false,
 		                       seekOffsetList: {},
