--- a/xgds_video/templates/xgds_video/map_live_playbacks.html
+++ b/xgds_video/templates/xgds_video/map_live_playbacks.html
@@ -32,8 +32,9 @@
  
  {% for source, noteform in zipped %}
         <div id="view-gridstack-item-{{source.name}}" class="grid-stack-item" 
-		data-gs-x="{{ forloop.counter0|multiply:3 }}" data-gs-y="0"
-        data-gs-width="{% if zipped|length > 1 %}3{% else %}6{%endif %}" data-gs-height="{% if zipped|length > 1 %}2{% else %}4{%endif %}" >
+		data-gs-x="{{ forloop.counter0|multiply:6 }}" data-gs-y="0"
+        data-gs-width="{% if zipped|length > 1 %}6{% else %}6{%endif %}"
+             data-gs-height="{% if zipped|length > 1 %}17{% else %}34{%endif %}" >
         <div class="grid-stack-item-content" id="view-gridstack-item-content-{{source.name}}" style="background-color:{{ source.displayColor }};">
 	        	<ul class="nav justify-content-end">
 	        		<i class="fa fa-lock pinDiv mr-1"></i>
@@ -74,34 +75,3 @@
 	{% endfor %}
 {% endblock jsInitVideo %}
 
-
-<!--  FROM DAVE 
-
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>JW Player</title>
-    <script src="/data/jwplayer7/jwplayer.js"></script>
-    <script>jwplayer.key = "rQsqsr2UQLOPJVt9QUrY3ZQLn2miRGlFj7oNEw==";</script>
-</head>
-<body>
-<div id="player"></div>
-
-<script>
-    jwplayer("player").setup({
-        primary: 'flash',
-        sources: [{
-            file: "rtmp://10.10.80.49:1935/live/mp4:stream1_snrf.sdp"
-        }],
-        width:1280,
-        height:720,
-        rtmp: {
-            bufferlength: 1.0
-        }
-    });
-</script>
-
-</body>
-</html>
-
- -->
