--- a/xgds_video/templates/xgds_video/map_recorded_playbacks.html
+++ b/xgds_video/templates/xgds_video/map_recorded_playbacks.html
@@ -29,7 +29,9 @@
  {% block extraAppOptions %}
  	showDetailView:false,
  {% endblock extraAppOptions %}
- 
+
+{% block gridstackWidth %}grid-stack-12 {% endblock gridstackWidth %}
+
  {% block preDashboard %}
  	{% block errorMessages %}
 	{% if messages %}
@@ -103,8 +105,8 @@
         {% block videoSources %}
         {% for source in sources %}
         <div id="source{{forloop.counter}}-gridstack-item" class="grid-stack-item" 
-			data-gs-x="{% if forloop.counter|modulo:2 == 0 %}3{% else %}0{% endif %}" data-gs-y="0"
-        	data-gs-width="{% if sources|length > 1 %}3{% else %}6{% endif %}" data-gs-height="{% if sources|length > 1 %}2{% else %}4{% endif %}" >
+			data-gs-x="{% if forloop.counter|modulo:2 == 0 %}6{% else %}0{% endif %}" data-gs-y="0"
+        	data-gs-width="{% if sources|length > 1 %}6{% else %}12{% endif %}" data-gs-height="{% if sources|length > 1 %}17{% else %}34{% endif %}" >
         	<div class="grid-stack-item-content video-div" id="item{{forloop.counter}}" style="background-color:{{ source.displayColor }};">
         		<ul class="nav justify-content-end ">
                 	<i class="fa fa-lock pinDiv gray-light mr-1"></i>
@@ -147,8 +149,8 @@
 
 {% block searchDiv %}
 <div id="search-gridstack-item" class="grid-stack-item" 
-		data-gs-x="4" data-gs-y="12"
-        data-gs-width="3" data-gs-height="2" style="display:none;">
+		data-gs-x="4" data-gs-y="60"
+        data-gs-width="6" data-gs-height="20" style="display:none;">
         <div class="grid-stack-item-content" id="search-gridstack-item-content" >
         	<ul class="nav justify-content-end ">	
 	        	<i class="fa fa-lock pinDiv gray-light mr-1"></i>
@@ -161,8 +163,8 @@
 
 {% block searchResultsDiv %}
 <div id="search-results-gridstack-item" class="grid-stack-item" 
-		data-gs-x="0" data-gs-y="4"
-        data-gs-width="3" data-gs-height="3" >
+		data-gs-x="0" data-gs-y="60"
+        data-gs-width="6" data-gs-height="30" >
         <div class="grid-stack-item-content" id="search-results-gridstack-item-content" >
 	        <ul class="nav justify-content-end ">
 	        	<i class="fa fa-refresh mr-1" title="Reload Latest" id="reloadSearchResults"></i>
@@ -177,8 +179,8 @@
 
 {% block viewDiv %}
 <div id="view-gridstack-item" class="grid-stack-item" 
-		data-gs-x="0" data-gs-y="12"
-        data-gs-width="3" data-gs-height="3" style="display:none;" >
+		data-gs-x="0" data-gs-y="60"
+        data-gs-width="6" data-gs-height="40" style="display:none;" >
         <div class="grid-stack-item-content" id="view-gridstack-item-content" >
         	<ul class="nav justify-content-end">
 				<i class="fa fa-lock pinDiv gray-light mr-1"></i>
@@ -200,8 +202,8 @@
 
 {% block map %}
 <div id="map-gridstack-item" class="grid-stack-item" 
-	  data-gs-x="3" data-gs-y="4"
-      data-gs-width="2" data-gs-height="2" >
+	  data-gs-x="6" data-gs-y="40"
+      data-gs-width="4" data-gs-height="20" >
 	<div class="grid-stack-item-content" id="map-gridstack-item-content" >
 		<ul class="nav justify-content-end">
 			<i class="fa fa-lock pinDiv gray-light mr-1"></i>
@@ -304,8 +306,8 @@ xgds_notes.cleanData = function(data, containerDiv){
 
 {% block layers %}
 <div id="layers-gridstack-item" class="grid-stack-item" 
-	  data-gs-x="5" data-gs-y="4"
-      data-gs-width="1" data-gs-height="2" >
+	  data-gs-x="10" data-gs-y="40"
+      data-gs-width="2" data-gs-height="20" >
 	<div class="grid-stack-item-content" id="layers-gridstack-item-content">
 	<ul class="nav justify-content-end ">
 		<i class="fa fa-lock pinDiv gray-light mr-1"></i>
@@ -315,3 +317,14 @@ xgds_notes.cleanData = function(data, containerDiv){
 	</div>
 </div>
 {% endblock layers %}
+
+{% block initGridstack %}
+    var gsOptions = {width:12,
+                     cellHeight: 20,
+	                 verticalMargin: 5,
+                     horizontalMargin: 5};
+    xgds_gridstack.initializeGridstack(gsOptions);
+{% endblock initGridstack %}
+
+{% block jsInitPreApp %}
+{% endblock jsInitPreApp %}
