--- a/xgds_video/attic/templates/LiveImageStream.html
+++ b/xgds_video/attic/templates/LiveImageStream.html
@@ -6,7 +6,7 @@
 	<script src="{% static 'geocamUtil/js/zmq.js' %}" type="text/javascript"></script>
 	<script src="{{ EXTERNAL_URL }}jquery/dist/jquery.min.js" type="text/javascript"></script>
  	<script src="{{ EXTERNAL_URL }}masonry/dist/masonry.pkgd.min.js" type="text/javascript"></script>
- 	<script language="javascript" type="text/javascript" src="{{ EXTERNAL_URL }}jquery-ui/jquery-ui.js"></script>
+ 	<script language="javascript" type="text/javascript" src="{{ EXTERNAL_URL }}jquery-ui-dist/jquery-ui.min.js"></script>
  	<script src="{{ EXTERNAL_URL }}jquery.tagsinput/src/jquery.tagsinput.js" type="text/javascript" ></script>
  	<script src="{{ EXTERNAL_URL }}jquery-form/jquery.form.js" type="text/javascript" ></script>
   	<script src="{% static 'xgds_video/js/video_size_utils.js' %}" type="text/javascript" ></script>
@@ -23,7 +23,7 @@
 {% block cssExtras %}
  {{ block.super }}
 	<link rel="stylesheet" type="text/css" href="{{ EXTERNAL_URL }}jquery.tagsinput/dist/jquery.tagsinput.min.css"></link>
-	<link rel="stylesheet" type="text/css" href="{{ EXTERNAL_URL }}jquery-ui/themes/base/jquery-ui.css" ></link>
+	<link rel="stylesheet" type="text/css" href="{{ EXTERNAL_URL }}jquery-ui-dist/jquery-ui.min.css" ></link>
 	<link rel="stylesheet" type="text/css" href="{% static 'xgds_video/css/xgds_video.css' %}"></link>
 {% endblock cssExtras %}
 
