--- a/xgds_video/attic/templates/SearchImageStreams.html
+++ b/xgds_video/attic/templates/SearchImageStreams.html
@@ -3,7 +3,7 @@
 {% block headExtras %}
 {{ block.super }}
     <script type="text/javascript" src="{{ EXTERNAL_URL }}jquery/dist/jquery.min.js"></script>
-    <script language="javascript" type="text/javascript" src="{{ EXTERNAL_URL }}jquery-ui/jquery-ui.js"></script>
+    <script language="javascript" type="text/javascript" src="{{ EXTERNAL_URL }}jquery-ui-dist/jquery-ui.min.js"></script>
  	<script type="text/javascript" src="{{ EXTERNAL_URL }}date.js/index.js"></script>
 {% endblock headExtras %}
 
@@ -17,7 +17,7 @@
 
 {% block nav %}
    {{ block.super }}
-   <link rel="stylesheet" type="text/css" href="{{ EXTERNAL_URL }}jquery-ui/themes/base/jquery-ui.css" ></link>
+   <link rel="stylesheet" type="text/css" href="{{ EXTERNAL_URL }}jquery-ui-dist/jquery-ui.min.css" ></link>
 {% endblock %}
 
 {% block sitemenu-content-secondary %}
@@ -50,7 +50,7 @@
 
 {% block scripts %}
   {{ block.super }}
-  	<script language="javascript" type="text/javascript" src="{{ EXTERNAL_URL }}jquery-ui/jquery-ui.js"></script>
+  	<script language="javascript" type="text/javascript" src="{{ EXTERNAL_URL }}jquery-ui-dist/jquery-ui.min.js"></script>
   	<script language="javascript" type="text/javascript" src="{{ EXTERNAL_URL }}datatables/media/js/jquery.dataTables.min.js"></script>
 	<script language="javascript" type="text/javascript" src="{% static 'geocamUtil/js/datatable_helpers.js' %}"></script>
 	
