--- a/xgds_video/templates/xgds_video/video_still_viewer.html
+++ b/xgds_video/templates/xgds_video/video_still_viewer.html
@@ -9,13 +9,13 @@
 
  {% block cssExtras %}
  {{ block.super }}
-    <link rel="stylesheet" type="text/css" href="{{ EXTERNAL_URL }}jquery-ui/themes/base/jquery-ui.css" ></link>
+    <link rel="stylesheet" type="text/css" href="{{ EXTERNAL_URL }}jquery-ui-dist/jquery-ui.min.css" ></link>
     <link rel="stylesheet" type="text/css" href="{% static 'xgds_video/css/xgds_video.css' %}"></link>
  {% endblock cssExtras %}
 
 {% block scripts %}
 {{block.super}}
-	<script type="text/javascript" src="{{ EXTERNAL_URL }}jquery-ui/jquery-ui.js"></script>
+	<script type="text/javascript" src="{{ EXTERNAL_URL }}jquery-ui-dist/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="{{ EXTERNAL_URL }}underscore/underscore-min.js"></script>
     <script type="text/javascript">
     	var source = '{{source.shortName}}';
