use default audio source from settings

--- a/xgds_video/templates/xgds_video/VideoJS.html
+++ b/xgds_video/templates/xgds_video/VideoJS.html
@@ -6,6 +6,8 @@
         var submitNoteUrl = "{% url 'record_simple' %}";
 		var videoStillViewerUrl = "{% url 'videoStillViewer' %}";
         var isLive = {% if isLive %} true {% else %} false {% endif %};
+
+        DEFAULT_AUDIO_SOURCE = '{{ settings.XGDS_VIDEO_DEFAULT_AUDIO_SOURCE }}';
     </script>
     <script type="text/javascript" src="{% static 'xgds_video/js/video_size_utils.js' %}"  ></script>
  	<script type="text/javascript" src="{% static 'xgds_video/js/recordedVideoSlider.js' %}"></script>
