--- a/xgds_video/static/xgds_video/css/xgds_video.css
+++ b/xgds_video/static/xgds_video/css/xgds_video.css
@@ -96,6 +96,32 @@ div.ui-slider-range.ui-widget-header {
     background: #505050;
 }
 
+.audioIcon {
+	margin-top: 2px;
+	color:black !important;
+}
+
+.audioSlider {
+    width: 100px;
+    height: 8px;
+	margin-left:4px;
+	margin-right: 4px;
+	margin-top: 3px;
+	margin-bottom: 3px;
+}
+
+.audioSlider .ui-slider {
+    border-radius: 2px;
+}
+.audioSlider .ui-slider-handle {
+    border-radius: 4px;
+    width: 0.4em;
+    margin-left: -0.2em;
+    background: black;
+    color: black;
+    border-color: black;
+}
+
 #legend {
     float: left;
     position: absolute;
