--- a/xgds_video/templates/xgds_video/VideoJS.html
+++ b/xgds_video/templates/xgds_video/VideoJS.html
@@ -6,6 +6,7 @@
         var submitNoteUrl = "{% url 'record_simple' %}";
 		var videoStillViewerUrl = "{% url 'videoStillViewer' %}";
         var isLive = {% if isLive %} true {% else %} false {% endif %};
+        image_model_name = '{{ settings.XGDS_IMAGE_IMAGE_MODEL_NAME }}';
 
         DEFAULT_AUDIO_SOURCE = '{{ settings.XGDS_VIDEO_DEFAULT_AUDIO_SOURCE }}';
     </script>
