--- a/xgds_video/templates/xgds_video/map_recorded_playbacks.html
+++ b/xgds_video/templates/xgds_video/map_recorded_playbacks.html
@@ -243,7 +243,7 @@ var indexFileUrl = null;
                        		   seekFlag: false,
 		                       initialState: false,
 		                       seekOffsetList: {},
-		                       episode: {{ episode|safe }},
+		                       episode: {{ episodeJson|safe }},
 		                       displaySegments: {{ segmentsJson|safe }},
 		                       firstSegment: null,
 		                       lastSegment: null,
