working on video playback from group flight page not done yet

--- a/xgds_video/templates/xgds_video/VideoCSS.html
+++ b/xgds_video/templates/xgds_video/VideoCSS.html
@@ -1,2 +1,3 @@
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'xgds_video/css/xgds_video.css' %}"></link>
+<link rel="stylesheet" type="text/css" href="{% static 'xgds_video/css/xgds_video_safe.css' %}"></link>
