green for note response

--- a/xgds_video/templates/xgds_video/video_notes.html
+++ b/xgds_video/templates/xgds_video/video_notes.html
@@ -14,7 +14,7 @@
 			{{ form.extras }}
 			<div id="error_div" class="noteerrordiv">
 				<span id="error_icon{{ form.index }}">&nbsp;</span>
-				<span id="error_content{{ form.index }}"></span>
+				<span id="error_content{{ form.index }}" class="success small"></span>
 			</div>
 			<div class="notecontainer" >
 				<textarea class="noteinput"  id="id_content{{form.index}}" type="text" name="content" maxlength="500" style="height:50px;" placeholder="Enter notes here"></textarea>
